--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "framer",
+  "homepage": "\"https://kieyg7.github.io/framer-motion",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "framer-motion": "^7.10.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -19,16 +21,17 @@
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
-
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "eslint-config-prettier": "^8.5.0"
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "BUILD_PATH='docs' react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
